// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Typeclasses > interfaces via records 1`] = `
[
  {
    "kind": "foreign",
    "name": "stringify",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_20;
  return v0;
}

function closure_20(String, t) {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ show: Π(t3: t) -> String ]) . Schema [ show: Π(t3: t) -> String ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Show"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [19]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [12]
[6] row:ext {"label":"show"}
  :rest -> [11]
  :value -> [7]
[7] pi {"variable":"t3","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [10]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] var:free {"name":"String"}
[10] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] row:empty
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"show"}
  :rest -> [18]
  :value -> [15]
[15] pi {"variable":"t3","icit":"Explicit","level":3}
  :annotation -> [16]
  :body -> [17]
[16] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[17] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [15] {"level":3}
[18] row:empty
[19] env
  :capture -> [9] {"index":0}
[20] closure
  :body -> [3]
  :env -> [19]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_20
      return v0
  fn closure_20(String, t) entry=entry
    entry:
      let v0 = alloc {  }
      return v0",
    "name": "Show",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ] -| Γ: t)",
    "type": "Π(t2: Type) -> Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_24;
  return v0;
}

function closure_24(Bool, t) {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Eq"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [23]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [14]
[6] row:ext {"label":"eq"}
  :rest -> [13]
  :value -> [7]
[7] pi {"variable":"t5","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] pi {"variable":"t6","icit":"Explicit","level":3}
  :annotation -> [10]
  :body -> [12]
[10] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] var:free {"name":"Bool"}
[12] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[13] row:empty
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] lit {"value":{"type":"Atom","value":"Schema"}}
[16] row:ext {"label":"eq"}
  :rest -> [22]
  :value -> [17]
[17] pi {"variable":"t5","icit":"Explicit","level":3}
  :annotation -> [18]
  :body -> [19]
[18] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[19] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [20]
  :body -> [21]
[20] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
[21] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
  :scope -> [19] {"level":4}
[22] row:empty
[23] env
  :capture -> [11] {"index":0}
[24] closure
  :body -> [3]
  :env -> [23]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_24
      return v0
  fn closure_24(Bool, t) entry=entry
    entry:
      let v0 = alloc {  }
      return v0",
    "name": "Eq",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ] -| Γ: t)",
    "type": "Π(t4: Type) -> Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = "Num";
  const v2 = v0(v1);
  const v3 = {
    show: v2
  };
  return v3;
}
return main();
",
    "elaborated": "Struct [ show: (λ(n: Num) -> FFI.stringify @Num n : Π(n: Num) -> String) ]",
    "error": "emit_erl: unknown function arity for "unknown"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"ShowNum"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"show"}
  :rest -> [14]
  :value -> [9]
[7] lit {"value":{"type":"Atom","value":"Num"}}
[9] app {"icit":"Implicit"}
  :arg -> [12]
  :func -> [11]
[10] var:foreign {"name":"stringify"}
[11] var:ref {"name":"stringify"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [9] {"level":1}
[12] lit {"value":{"type":"Atom","value":"Num"}}
[14] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &unknown
      let v1 = Num
      let v2 = call *v0(v1)
      let v3 = alloc { show: v2 }
      return v3",
    "name": "ShowNum",
    "normalized": "Struct [ show: λ(n: Num) -> (closure: FFI.stringify @Num n -| Γ: n) ]",
    "type": "Σ($sig: [ show: Π(t3: Num) -> String ]) . Schema [ show: Π(t3: Num) -> String ]",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_21;
  const v1 = {
    show: v0
  };
  return v1;
}

function closure_21(b) {
  let __block = "entry";
  while (true) {
    switch (__block) {
      case "entry": {
        (__block = "sw1");
        break;
      }
      case "sw1": {
        if ((String(b) === "true")) {
          (__block = "case3");
          break;
        }
        if ((String(b) === "false")) {
          (__block = "case4");
          break;
        }
      }
      case "case3": {
        const v4 = "true";
        const match0 = v4;
        (__block = "join2");
        break;
      }
      case "case4": {
        const v5 = "false";
        const match0 = v5;
        (__block = "join2");
        break;
      }
      case "join2": {
        return match0;
      }
    }
  }
}
return main();
",
    "elaborated": "Struct
  [ show: (λ(b: Bool) ->
      match b | true -> "true" | false -> "false" : Π(b: Bool) -> String) ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"ShowBool"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"show"}
  :rest -> [16]
  :value -> [6]
[6] lambda {"variable":"b","icit":"Explicit","level":1}
  :annotation -> [7]
  :body -> [8]
  :env -> [20]
[7] lit {"value":{"type":"Atom","value":"Bool"}}
[8] match
  :alt -> [10] {"index":0}
  :alt -> [13] {"index":1}
  :decision_tree -> [17]
  :scrutinee -> [9]
[9] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [6] {"level":1}
[10] case
  :body -> [12]
  :next -> [13]
  :pattern -> [11]
[11] pat:lit {"value":{"type":"Bool","value":true}}
[12] lit {"value":{"type":"String","value":"true"}}
[13] case
  :body -> [15]
  :pattern -> [14]
[14] pat:lit {"value":{"type":"Bool","value":false}}
[15] lit {"value":{"type":"String","value":"false"}}
[16] row:empty
[17] switch {"kind":"lit"}
  :branch -> [18] {"value":{"type":"Bool","value":true}}
  :branch -> [19] {"value":{"type":"Bool","value":false}}
  :inspect -> [9]
[18] leaf
  :body -> [12]
[19] leaf
  :body -> [15]
[20] env
[21] closure
  :body -> [6]
  :env -> [20]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_21
      let v1 = alloc { show: v0 }
      return v1
  fn closure_21(b) entry=entry
    entry:
      jump sw1
    sw1:
      branch b { true -> case3 | false -> case4 }
    case3:
      let v4 = "true"
      let match0 = v4
      jump join2
    case4:
      let v5 = "false"
      let match0 = v5
      jump join2
    join2:
      return match0",
    "name": "ShowBool",
    "normalized": "Struct
  [ show: λ(b: Bool) ->
      (closure: match b | true -> "true" | false -> "false" -| Γ: b) ]",
    "type": "Σ($sig: [ show: Π(t3: Bool) -> String ]) .
  Schema [ show: Π(t3: Bool) -> String ]",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = {
    eq: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct
  [ eq: (λ(x: Num) ->
      (λ(y: Num) -> FFI.$eq x y : Π(y: Num) -> Bool) : Π(x: Num) ->
      Π(y: Num) -> Bool) ]",
    "error": "emit_erl: unknown function arity for "unknown"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"EqNum"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"eq"}
  :rest -> [16]
  :value -> [13]
[7] lit {"value":{"type":"Atom","value":"Num"}}
[9] lit {"value":{"type":"Atom","value":"Num"}}
[12] var:foreign {"name":"$eq","arity":2}
[13] var:ref {"name":"$eq"}
  :refers_to -> [12]
  :scope -> [2] {"level":0}
  :scope -> [13] {"level":1}
[16] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &unknown
      let v1 = alloc { eq: v0 }
      return v1",
    "name": "EqNum",
    "normalized": "Struct
  [ eq: λ(x: Num) ->
      (closure: (λ(y: Num) -> FFI.$eq x y : Π(y: Num) -> Bool) -| Γ: x) ]",
    "type": "Σ($sig: [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]) .
  Schema [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]",
  },
]
`;

exports[`Language Tour — Typeclasses > multiple constraints 1`] = `
[
  {
    "kind": "foreign",
    "name": "stringify",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_20;
  return v0;
}

function closure_20(String, t) {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ show: Π(t3: t) -> String ]) . Schema [ show: Π(t3: t) -> String ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Show"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [19]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [12]
[6] row:ext {"label":"show"}
  :rest -> [11]
  :value -> [7]
[7] pi {"variable":"t3","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [10]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] var:free {"name":"String"}
[10] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] row:empty
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"show"}
  :rest -> [18]
  :value -> [15]
[15] pi {"variable":"t3","icit":"Explicit","level":3}
  :annotation -> [16]
  :body -> [17]
[16] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[17] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [15] {"level":3}
[18] row:empty
[19] env
  :capture -> [9] {"index":0}
[20] closure
  :body -> [3]
  :env -> [19]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_20
      return v0
  fn closure_20(String, t) entry=entry
    entry:
      let v0 = alloc {  }
      return v0",
    "name": "Show",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ] -| Γ: t)",
    "type": "Π(t2: Type) -> Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_24;
  return v0;
}

function closure_24(Bool, t) {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Eq"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [23]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [14]
[6] row:ext {"label":"eq"}
  :rest -> [13]
  :value -> [7]
[7] pi {"variable":"t5","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] pi {"variable":"t6","icit":"Explicit","level":3}
  :annotation -> [10]
  :body -> [12]
[10] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] var:free {"name":"Bool"}
[12] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[13] row:empty
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] lit {"value":{"type":"Atom","value":"Schema"}}
[16] row:ext {"label":"eq"}
  :rest -> [22]
  :value -> [17]
[17] pi {"variable":"t5","icit":"Explicit","level":3}
  :annotation -> [18]
  :body -> [19]
[18] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[19] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [20]
  :body -> [21]
[20] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
[21] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
  :scope -> [19] {"level":4}
[22] row:empty
[23] env
  :capture -> [11] {"index":0}
[24] closure
  :body -> [3]
  :env -> [23]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_24
      return v0
  fn closure_24(Bool, t) entry=entry
    entry:
      let v0 = alloc {  }
      return v0",
    "name": "Eq",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ] -| Γ: t)",
    "type": "Π(t4: Type) -> Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = "Num";
  const v2 = v0(v1);
  const v3 = {
    show: v2
  };
  return v3;
}
return main();
",
    "elaborated": "Struct [ show: (λ(n: Num) -> FFI.stringify @Num n : Π(n: Num) -> String) ]",
    "error": "emit_erl: unknown function arity for "unknown"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"ShowNum"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"show"}
  :rest -> [14]
  :value -> [9]
[7] lit {"value":{"type":"Atom","value":"Num"}}
[9] app {"icit":"Implicit"}
  :arg -> [12]
  :func -> [11]
[10] var:foreign {"name":"stringify"}
[11] var:ref {"name":"stringify"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [9] {"level":1}
[12] lit {"value":{"type":"Atom","value":"Num"}}
[14] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &unknown
      let v1 = Num
      let v2 = call *v0(v1)
      let v3 = alloc { show: v2 }
      return v3",
    "name": "ShowNum",
    "normalized": "Struct [ show: λ(n: Num) -> (closure: FFI.stringify @Num n -| Γ: n) ]",
    "type": "Σ($sig: [ show: Π(t3: Num) -> String ]) . Schema [ show: Π(t3: Num) -> String ]",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = {
    eq: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct
  [ eq: (λ(x: Num) ->
      (λ(y: Num) -> FFI.$eq x y : Π(y: Num) -> Bool) : Π(x: Num) ->
      Π(y: Num) -> Bool) ]",
    "error": "emit_erl: unknown function arity for "unknown"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"EqNum"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"eq"}
  :rest -> [16]
  :value -> [13]
[7] lit {"value":{"type":"Atom","value":"Num"}}
[9] lit {"value":{"type":"Atom","value":"Num"}}
[12] var:foreign {"name":"$eq","arity":2}
[13] var:ref {"name":"$eq"}
  :refers_to -> [12]
  :scope -> [2] {"level":0}
  :scope -> [13] {"level":1}
[16] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &unknown
      let v1 = alloc { eq: v0 }
      return v1",
    "name": "EqNum",
    "normalized": "Struct
  [ eq: λ(x: Num) ->
      (closure: (λ(y: Num) -> FFI.$eq x y : Π(y: Num) -> Bool) -| Γ: x) ]",
    "type": "Σ($sig: [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]) .
  Schema [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(t: Type) =>
  λ(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    λ(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
      Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
      λ(x: t) ->
        λ(y: t) ->
          match ((eq).eq) x y
            | true -> FFI.$concat "Equal: " (((show).show) x)
            | false -> "Not equal"",
    "error": "Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"displayIfEqual"}
[3] lambda {"variable":"t","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [66]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"show","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [19]
  :env -> [67]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [12]
[7] row:ext {"label":"show"}
  :rest -> [11]
  :value -> [8]
[8] pi {"variable":"t3","icit":"Explicit","level":2}
  :annotation -> [9]
  :body -> [10]
[9] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] lit {"value":{"type":"Atom","value":"String"}}
[11] row:empty
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"show"}
  :rest -> [18]
  :value -> [15]
[15] pi {"variable":"t3","icit":"Explicit","level":3}
  :annotation -> [16]
  :body -> [17]
[16] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[17] lit {"value":{"type":"Atom","value":"String"}}
[18] row:empty
[19] lambda {"variable":"eq","icit":"Implicit","level":3}
  :annotation -> [20]
  :body -> [37]
  :env -> [68]
[20] sigma {"variable":"$sig","level":3}
  :annotation -> [21]
  :body -> [28]
[21] row:ext {"label":"eq"}
  :rest -> [27]
  :value -> [22]
[22] pi {"variable":"t5","icit":"Explicit","level":3}
  :annotation -> [23]
  :body -> [24]
[23] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[24] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [25]
  :body -> [26]
[25] var:bound {"index":2}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [22] {"level":3}
[26] lit {"value":{"type":"Atom","value":"Bool"}}
[27] row:empty
[28] app {"icit":"Explicit"}
  :arg -> [30]
  :func -> [29]
[29] lit {"value":{"type":"Atom","value":"Schema"}}
[30] row:ext {"label":"eq"}
  :rest -> [36]
  :value -> [31]
[31] pi {"variable":"t5","icit":"Explicit","level":4}
  :annotation -> [32]
  :body -> [33]
[32] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [20] {"level":3}
[33] pi {"variable":"t6","icit":"Explicit","level":5}
  :annotation -> [34]
  :body -> [35]
[34] var:bound {"index":2}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [20] {"level":3}
  :scope -> [31] {"level":4}
[35] lit {"value":{"type":"Atom","value":"Bool"}}
[36] row:empty
[37] lambda {"variable":"x","icit":"Explicit","level":4}
  :annotation -> [38]
  :body -> [39]
  :env -> [69]
[38] var:bound {"index":2}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
[39] lambda {"variable":"y","icit":"Explicit","level":5}
  :annotation -> [40]
  :body -> [41]
  :env -> [70]
[40] var:bound {"index":3}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
[41] match
  :alt -> [48] {"index":0}
  :alt -> [59] {"index":1}
  :decision_tree -> [63]
  :scrutinee -> [42]
[42] app {"icit":"Explicit"}
  :arg -> [47]
  :func -> [43]
[43] app {"icit":"Explicit"}
  :arg -> [46]
  :func -> [44]
[44] proj {"label":"eq"}
  :target -> [45]
[45] var:bound {"index":2}
  :refers_to -> [19]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
  :scope -> [39] {"level":5}
[46] var:bound {"index":1}
  :refers_to -> [37]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
  :scope -> [39] {"level":5}
[47] var:bound {"index":0}
  :refers_to -> [39]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
  :scope -> [39] {"level":5}
[48] case
  :body -> [62]
  :next -> [59]
  :pattern -> [49]
[49] pat:lit {"value":{"type":"Bool","value":true}}
[52] var:foreign {"name":"$concat","arity":2}
[54] lit {"value":{"type":"String","value":"Equal: "}}
  :next -> [55]
[55] app {"icit":"Explicit"}
  :arg -> [58]
  :func -> [56]
[56] proj {"label":"show"}
  :target -> [57]
[57] var:bound {"index":3}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
  :scope -> [39] {"level":5}
[58] var:bound {"index":1}
  :refers_to -> [37]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [19] {"level":3}
  :scope -> [37] {"level":4}
  :scope -> [39] {"level":5}
[59] case
  :body -> [61]
  :pattern -> [60]
[60] pat:lit {"value":{"type":"Bool","value":false}}
[61] lit {"value":{"type":"String","value":"Not equal"}}
[62] primop {"op":"$concat"}
  :arg -> [54] {"index":0}
  :arg -> [55] {"index":1}
  :callee -> [52]
[63] switch {"kind":"lit"}
  :branch -> [64] {"value":{"type":"Bool","value":true}}
  :branch -> [65] {"value":{"type":"Bool","value":false}}
  :inspect -> [42]
[64] leaf
  :body -> [62]
[65] leaf
  :body -> [61]
[66] env
[67] env
  :capture -> [3] {"index":0}
[68] env
  :capture -> [3] {"index":0}
  :capture -> [5] {"index":1}
[69] env
  :capture -> [3] {"index":0}
  :capture -> [19] {"index":1}
  :capture -> [5] {"index":2}
[70] env
  :capture -> [19] {"index":0}
  :capture -> [37] {"index":1}
  :capture -> [5] {"index":2}
[71] closure
  :body -> [3]
  :env -> [66]
[72] closure
  :body -> [5]
  :env -> [67]
[73] closure
  :body -> [19]
  :env -> [68]
[74] closure
  :body -> [37]
  :env -> [69]
[75] closure
  :body -> [39]
  :env -> [70]",
    "kind": "let",
    "mir": "",
    "name": "displayIfEqual",
    "normalized": "λ(t: Type) =>
  (closure: λ(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    λ(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
      Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
      λ(x: t) ->
        λ(y: t) ->
          match ((eq).eq) x y
            | true -> FFI.$concat "Equal: " (((show).show) x)
            | false -> "Not equal" -| Γ: t)",
    "type": "Π(t: Type) =>
  Π(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    Π(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
      Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
      Π(x: t) -> Π(y: t) -> String",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "codegenJS": "function main() {
  const v0 = displayIfEqual;
  const v1 = "Num";
  const v2 = v0(v1);
  const v3 = ShowNum;
  const v4 = v2(v3);
  const v5 = EqNum;
  const v6 = v4(v5);
  const v7 = 5;
  const v8 = v6(v7);
  const v9 = 5;
  const v10 = v8(v9);
  return v10;
}
return main();
",
    "elaborated": "displayIfEqual @Num @ShowNum @EqNum 5 5",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"msg"}
[3] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [4]
[4] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [5]
[5] app {"icit":"Implicit"}
  :arg -> [14]
  :func -> [6]
[6] app {"icit":"Implicit"}
  :arg -> [12]
  :func -> [7]
[7] app {"icit":"Implicit"}
  :arg -> [10]
  :func -> [9]
[8] var:free {"name":"displayIfEqual"}
[9] var:ref {"name":"displayIfEqual"}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
[10] lit {"value":{"type":"Atom","value":"Num"}}
[11] var:free {"name":"ShowNum"}
[12] var:ref {"name":"ShowNum"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
[13] var:free {"name":"EqNum"}
[14] var:ref {"name":"EqNum"}
  :refers_to -> [13]
  :scope -> [2] {"level":0}
[15] lit {"value":{"type":"Num","value":5}}
[16] lit {"value":{"type":"Num","value":5}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = displayIfEqual
      let v1 = Num
      let v2 = call *v0(v1)
      let v3 = ShowNum
      let v4 = call *v2(v3)
      let v5 = EqNum
      let v6 = call *v4(v5)
      let v7 = 5
      let v8 = call *v6(v7)
      let v9 = 5
      let v10 = call *v8(v9)
      return v10",
    "name": "msg",
    "normalized": "($concat: ("Equal: ") (FFI.stringify @Num 5))",
    "type": "String",
  },
]
`;

exports[`Language Tour — Typeclasses > traits with implicits 1`] = `
[
  {
    "kind": "foreign",
    "name": "stringify",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_20;
  return v0;
}

function closure_20(String, t) {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ show: Π(t3: t) -> String ]) . Schema [ show: Π(t3: t) -> String ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Show"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [19]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [12]
[6] row:ext {"label":"show"}
  :rest -> [11]
  :value -> [7]
[7] pi {"variable":"t3","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [10]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] var:free {"name":"String"}
[10] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] row:empty
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"show"}
  :rest -> [18]
  :value -> [15]
[15] pi {"variable":"t3","icit":"Explicit","level":3}
  :annotation -> [16]
  :body -> [17]
[16] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[17] var:ref {"name":"String"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [15] {"level":3}
[18] row:empty
[19] env
  :capture -> [9] {"index":0}
[20] closure
  :body -> [3]
  :env -> [19]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_20
      return v0
  fn closure_20(String, t) entry=entry
    entry:
      let v0 = alloc {  }
      return v0",
    "name": "Show",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ] -| Γ: t)",
    "type": "Π(t2: Type) -> Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_24;
  return v0;
}

function closure_24(Bool, t) {
  const v0 = {};
  return v0;
}
return main();
",
    "elaborated": "λ(t: Type) ->
  Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Eq"}
[3] lambda {"variable":"t","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [23]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] sigma {"variable":"$sig","level":2}
  :annotation -> [6]
  :body -> [14]
[6] row:ext {"label":"eq"}
  :rest -> [13]
  :value -> [7]
[7] pi {"variable":"t5","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] pi {"variable":"t6","icit":"Explicit","level":3}
  :annotation -> [10]
  :body -> [12]
[10] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[11] var:free {"name":"Bool"}
[12] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [9] {"level":3}
[13] row:empty
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] lit {"value":{"type":"Atom","value":"Schema"}}
[16] row:ext {"label":"eq"}
  :rest -> [22]
  :value -> [17]
[17] pi {"variable":"t5","icit":"Explicit","level":3}
  :annotation -> [18]
  :body -> [19]
[18] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[19] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [20]
  :body -> [21]
[20] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
[21] var:ref {"name":"Bool"}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [17] {"level":3}
  :scope -> [19] {"level":4}
[22] row:empty
[23] env
  :capture -> [11] {"index":0}
[24] closure
  :body -> [3]
  :env -> [23]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_24
      return v0
  fn closure_24(Bool, t) entry=entry
    entry:
      let v0 = alloc {  }
      return v0",
    "name": "Eq",
    "normalized": "λ(t: Type) ->
  (closure: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ] -| Γ: t)",
    "type": "Π(t4: Type) -> Type",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = "Num";
  const v2 = v0(v1);
  const v3 = {
    show: v2
  };
  return v3;
}
return main();
",
    "elaborated": "Struct [ show: (λ(n: Num) -> FFI.stringify @Num n : Π(n: Num) -> String) ]",
    "error": "emit_erl: unknown function arity for "unknown"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"ShowNum"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"show"}
  :rest -> [14]
  :value -> [9]
[7] lit {"value":{"type":"Atom","value":"Num"}}
[9] app {"icit":"Implicit"}
  :arg -> [12]
  :func -> [11]
[10] var:foreign {"name":"stringify"}
[11] var:ref {"name":"stringify"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [9] {"level":1}
[12] lit {"value":{"type":"Atom","value":"Num"}}
[14] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &unknown
      let v1 = Num
      let v2 = call *v0(v1)
      let v3 = alloc { show: v2 }
      return v3",
    "name": "ShowNum",
    "normalized": "Struct [ show: λ(n: Num) -> (closure: FFI.stringify @Num n -| Γ: n) ]",
    "type": "Σ($sig: [ show: Π(t3: Num) -> String ]) . Schema [ show: Π(t3: Num) -> String ]",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = {
    eq: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct
  [ eq: (λ(x: Num) ->
      (λ(y: Num) -> FFI.$eq x y : Π(y: Num) -> Bool) : Π(x: Num) ->
      Π(y: Num) -> Bool) ]",
    "error": "emit_erl: unknown function arity for "unknown"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"EqNum"}
[3] app {"icit":"Explicit"}
  :arg -> [5]
  :func -> [4]
[4] lit {"value":{"type":"Atom","value":"Struct"}}
[5] row:ext {"label":"eq"}
  :rest -> [16]
  :value -> [13]
[7] lit {"value":{"type":"Atom","value":"Num"}}
[9] lit {"value":{"type":"Atom","value":"Num"}}
[12] var:foreign {"name":"$eq","arity":2}
[13] var:ref {"name":"$eq"}
  :refers_to -> [12]
  :scope -> [2] {"level":0}
  :scope -> [13] {"level":1}
[16] row:empty",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &unknown
      let v1 = alloc { eq: v0 }
      return v1",
    "name": "EqNum",
    "normalized": "Struct
  [ eq: λ(x: Num) ->
      (closure: (λ(y: Num) -> FFI.$eq x y : Π(y: Num) -> Bool) -| Γ: x) ]",
    "type": "Σ($sig: [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]) .
  Schema [ eq: Π(t5: Num) -> Π(t6: Num) -> Bool ]",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(t: Type) =>
  λ(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    λ(x: t) -> ((show).show) x",
    "error": "Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"display"}
[3] lambda {"variable":"t","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [25]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"show","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [22]
  :env -> [26]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [12]
[7] row:ext {"label":"show"}
  :rest -> [11]
  :value -> [8]
[8] pi {"variable":"t3","icit":"Explicit","level":2}
  :annotation -> [9]
  :body -> [10]
[9] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] lit {"value":{"type":"Atom","value":"String"}}
[11] row:empty
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"show"}
  :rest -> [18]
  :value -> [15]
[15] pi {"variable":"t3","icit":"Explicit","level":3}
  :annotation -> [16]
  :body -> [17]
[16] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[17] lit {"value":{"type":"Atom","value":"String"}}
[18] row:empty
[20] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[22] proj {"label":"show"}
  :target -> [23]
[23] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[25] env
[26] env
  :capture -> [3] {"index":0}
[27] closure
  :body -> [3]
  :env -> [25]
[28] closure
  :body -> [5]
  :env -> [26]",
    "kind": "let",
    "mir": "",
    "name": "display",
    "normalized": "λ(t: Type) =>
  (closure: λ(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    λ(x: t) -> ((show).show) x -| Γ: t)",
    "type": "Π(t: Type) =>
  Π(show: Σ($sig: [ show: Π(t3: t) -> String ]) .
    Schema [ show: Π(t3: t) -> String ]) =>
    Π(x: t) -> String",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(t: Type) =>
  λ(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
    λ(x: t) -> λ(y: t) -> ((eq).eq) x y",
    "error": "Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"areEqual"}
[3] lambda {"variable":"t","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [33]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"eq","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [29]
  :env -> [34]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [14]
[7] row:ext {"label":"eq"}
  :rest -> [13]
  :value -> [8]
[8] pi {"variable":"t5","icit":"Explicit","level":2}
  :annotation -> [9]
  :body -> [10]
[9] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] pi {"variable":"t6","icit":"Explicit","level":3}
  :annotation -> [11]
  :body -> [12]
[11] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [8] {"level":2}
[12] lit {"value":{"type":"Atom","value":"Bool"}}
[13] row:empty
[14] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [15]
[15] lit {"value":{"type":"Atom","value":"Schema"}}
[16] row:ext {"label":"eq"}
  :rest -> [22]
  :value -> [17]
[17] pi {"variable":"t5","icit":"Explicit","level":3}
  :annotation -> [18]
  :body -> [19]
[18] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[19] pi {"variable":"t6","icit":"Explicit","level":4}
  :annotation -> [20]
  :body -> [21]
[20] var:bound {"index":1}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
  :scope -> [17] {"level":3}
[21] lit {"value":{"type":"Atom","value":"Bool"}}
[22] row:empty
[24] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[26] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[29] proj {"label":"eq"}
  :target -> [30]
[30] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[33] env
[34] env
  :capture -> [3] {"index":0}
[35] closure
  :body -> [3]
  :env -> [33]
[36] closure
  :body -> [5]
  :env -> [34]",
    "kind": "let",
    "mir": "",
    "name": "areEqual",
    "normalized": "λ(t: Type) =>
  (closure: λ(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
    λ(x: t) -> λ(y: t) -> ((eq).eq) x y -| Γ: t)",
    "type": "Π(t: Type) =>
  Π(eq: Σ($sig: [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) .
    Schema [ eq: Π(t5: t) -> Π(t6: t) -> Bool ]) =>
    Π(x: t) -> Π(y: t) -> Bool",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "codegenJS": "function main() {
  const v0 = display;
  const v1 = "Num";
  const v2 = v0(v1);
  const v3 = ShowNum;
  const v4 = v2(v3);
  const v5 = 42;
  const v6 = v4(v5);
  return v6;
}
return main();
",
    "elaborated": "display @Num @ShowNum 42",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"shown"}
[3] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [10]
  :func -> [5]
[5] app {"icit":"Implicit"}
  :arg -> [8]
  :func -> [7]
[6] var:free {"name":"display"}
[7] var:ref {"name":"display"}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] var:free {"name":"ShowNum"}
[10] var:ref {"name":"ShowNum"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
[11] lit {"value":{"type":"Num","value":42}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = display
      let v1 = Num
      let v2 = call *v0(v1)
      let v3 = ShowNum
      let v4 = call *v2(v3)
      let v5 = 42
      let v6 = call *v4(v5)
      return v6",
    "name": "shown",
    "normalized": "FFI.stringify @Num 42",
    "type": "String",
  },
  {
    "codegenJS": "function main() {
  const v0 = areEqual;
  const v1 = "Num";
  const v2 = v0(v1);
  const v3 = EqNum;
  const v4 = v2(v3);
  const v5 = 10;
  const v6 = v4(v5);
  const v7 = 10;
  const v8 = v6(v7);
  return v8;
}
return main();
",
    "elaborated": "areEqual @Num @EqNum 10 10",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"same"}
[3] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [4]
[4] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [5]
[5] app {"icit":"Implicit"}
  :arg -> [11]
  :func -> [6]
[6] app {"icit":"Implicit"}
  :arg -> [9]
  :func -> [8]
[7] var:free {"name":"areEqual"}
[8] var:ref {"name":"areEqual"}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
[9] lit {"value":{"type":"Atom","value":"Num"}}
[10] var:free {"name":"EqNum"}
[11] var:ref {"name":"EqNum"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
[12] lit {"value":{"type":"Num","value":10}}
[13] lit {"value":{"type":"Num","value":10}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = areEqual
      let v1 = Num
      let v2 = call *v0(v1)
      let v3 = EqNum
      let v4 = call *v2(v3)
      let v5 = 10
      let v6 = call *v4(v5)
      let v7 = 10
      let v8 = call *v6(v7)
      return v8",
    "name": "same",
    "normalized": "true",
    "type": "Bool",
  },
]
`;
